--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,6 +18,11 @@ body {
     font-size: 16px;
     font-family: var(--montserrat);
     background: var(--rose);
+    padding-top:0px;
+   margin-top: 0px;
+   box-sizing: border-box;
+   position:relative;
+   scroll-behavior: smooth;
 }
 
 h1 {
@@ -77,7 +82,18 @@ h4 {
     height: 80px;
     padding-left: 100px;
     padding-right: 100px;
-    background: transparent !important;
+    position: fixed;
+    z-index: 1000;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+}
+.navbar-collapse{
+    
+    text-align: center;
 }
 
 .nav-link {
@@ -111,6 +127,7 @@ h4 {
     margin-top: 2%;
     position: relative;
     margin-bottom: 10%;
+    margin-top: 80px;
 
 }
 
@@ -268,6 +285,10 @@ footer img {
         padding-left: 0px;
         padding-right: 0px;
     }
+    .navbar-collapse{
+        padding:5%;
+        background:var(--rose)!important;
+    }
 
     .navbar-nav {
         height: 100vh;
@@ -277,12 +298,15 @@ footer img {
     }
 
     .nav-link {
-        color: var(--white);
+        color: var(--grey);
         font-size: 2rem;
+    }
+    .highlight-menu{
+        color:var(--rose);
     }
 
     .navbar-nav .active {
-        color: var(--white) !important;
+        color: var(--blue) !important;
         text-decoration: underline;
     }
 
